test_data/end_to_end/err__return_with_semicolon/stderr.txt
error: mismatching return types: function `f::()` expects `i32`, found `{}`
  --> main.cz:2:14
2 |     return 42;
                 ~
